--- a/css/main.css
+++ b/css/main.css
@@ -486,4 +486,26 @@ textarea.input100 {
   }
 }
 
-
+.myButton {
+	background-color:#44c767;
+	-moz-border-radius:34px;
+	-webkit-border-radius:34px;
+	border-radius:34px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+  size: 50px;
+	color:#ffffff;
+	font-family:Verdana;
+	font-size:18px;
+	padding:21px 76px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
