--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,14 @@ iframe {
 
   padding: 64px 15px 64px 15px;
 }
-
+.contact100-form-title-3{
+  font-family: Poppins-Bold;
+  font-size: 24px;
+  color: #fff;
+  line-height: 1.2;
+  text-align: left;
+  padding-bottom: 7px;
+}
 .contact100-form-title-1 {
   font-family: Poppins-Bold;
   font-size: 20px;
@@ -509,3 +516,6 @@ textarea.input100 {
 	position:relative;
 	top:1px;
 }
+
+
+
